--- a/register.html
+++ b/register.html
@@ -15,11 +15,11 @@
         <div class="form-sect p-5 fx-col-12">
             <form action="#/" >
                 <div class="form-group ">
-                    <h2 class="text-center m-b-3">Log In</h2>
+                    <h2 class="text-center m-b-3">Register</h2>
                     <input type="email" class="form-control m-b-1" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control m-b-1" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Confirm Password">
                 </div>
-                <a class="m-t-1" href="forget-password.html">Forgot password?</a>
                 <button type="submit" class="btn btn-primary">NEXT</button>
             </form>
         </div>
