--- a/index.html
+++ b/index.html
@@ -2,43 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dashboard</title>
     <!-- Vendors Style-->
 <!--    <link rel="stylesheet" href="css/vendors_css.css">-->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+<!--    <link rel="stylesheet" href="css/bootstrap.min.css">-->
 
     <!-- Style-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/flexer.css" type="text/css">
     <link rel="stylesheet" href="css/custom_style.css" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
 </head>
 <body>
-    <aside id="blue_sect">
-       <div id="btn-container" class="fx-row justify-even">
-        <a class="butn" href="#/">example.com</a>
-        <a class="butn" href="#/">sample.com</a>
-        <a class="butn" href="#/">gamble.com</a>
-    </div>
+    <aside id="blue_sect" class="fx-row justify-between">
+       <div id="btn-container" class="fx-row justify-fx-start p-t-1">
+            <a class="butn m-r-1" href="#/" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" >example.com</a>
+            <a class="butn m-r-1" href="#/" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" >sample.com</a>
+            <a class="butn m-r-1" href="#/" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" >gamble.com</a>
+        </div>
+        <div class="p-t-1">
+            <a href="#/" id="add-butn" class="round-add-butn fx-row justify-center align-center" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"><span class="material-icons" style="font-size: 35px;" >add</span></a>
+        </div>
     </aside>
     <main>
         <section id="info" class="fx-row justify-center fx-nowrap">
-            <div id="bar-chart" class="fx-col-4">
+            <div id="bar-chart" class="fx-col-5">
                 <div class="title">Expenses</div>
                 <p class="ad-fb">Adword + Facebook.</p>
                 <img src="https://www.primefaces.org/sapphire-ng/assets/layout/images/dashboard/asset-stats.svg" alt="">
             </div>
-            <div id="area-chart" class="fx-col-4">
+            <div id="area-chart" class="fx-col-5">
                 <div class="title">Revenue</div>
                 <div class="number">26520 / day</div>
                 <img src="https://www.primefaces.org/sapphire-ng/assets/layout/images/dashboard/asset-graph.svg" alt="">
             </div>
-            <div id="donut-chart" class="fx-col-4">
+            <div id="donut-chart" class="fx-col-5">
                 <div class="title">Metrics</div>
                 <div class="number">2,449,570</div>
-                <div class="fx-row">
+                <div class="fx-row fx-nowrap">
                     <div class="fx-col-4 p-0">
                         <img src="https://www.primefaces.org/sapphire-ng/assets/layout/images/dashboard/asset-connectiongraph.svg" alt="">
                     </div>
@@ -69,7 +75,7 @@
                         <a class="nav-item nav-link fx-col-4" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Month</a>
                     </div>
                 </nav>
-                <div class="tab-content" id="nav-tabContent">
+                <div class="tab-content m-b-2 " id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                         <div class="fx-row m-t-3">
                             <div class="fx-col-4 text-center">
@@ -179,43 +185,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-<!--                <div class="fx-row m-t-3">
-                    <div class="fx-col-4 text-center">
-                        <div class="userprofile-circle crcle-order"></div>
-                        <div class="userprofile-status">ORDERS</div>
-                        <div class="userprofile-value">190</div>
-                    </div>
-                    <div class="fx-col-4 text-center">
-                        <div class="userprofile-circle crcle-profits"></div>
-                        <div class="userprofile-status">PROFITS</div>
-                        <div class="userprofile-value">64</div>
-                    </div>
-                    <div class="fx-col-4 text-center">
-                        <div class="userprofile-circle crcle-revenue"></div>
-                        <div class="userprofile-status">REVENUE</div>
-                        <div class="userprofile-value">28</div>
-                    </div>
-                </div>
-                <div class="fx-row m-t-3">
-                    <div class="fx-col-4 text-center">
-                        <div class="userprofile-circle crcle-expenses"></div>
-                        <div class="userprofile-status">ADWORD</div>
-                        <div class="userprofile-value">190</div>
-                    </div>
-                    <div class="fx-col-4 text-center">
-                        <div class="userprofile-circle crcle-expenses"></div>
-                        <div class="userprofile-status">FACEBOOK</div>
-                        <div class="userprofile-value">64</div>
-                    </div>
-                    <div class="fx-col-4 text-center">
-                        <div class="userprofile-circle crcle-ship"></div>
-                        <div class="userprofile-status">SHIPPING</div>
-                        <div class="userprofile-value">28</div>
-                    </div>
-                </div>-->
             </div>
             <div class="fx-col-8 p-0">
                 <div class="box line-chart">
@@ -229,12 +198,49 @@
             </div>
         </section>
     </main>
+    <aside>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Add website</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Website Name:</label>
+                                <input type="text" class="form-control" id="recipient-name">
+                            </div>
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Domain:</label>
+                                <input type="text" class="form-control" id="domain-name">
+                            </div>
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">API Key:</label>
+                                <input type="text" class="form-control" id="api-key">
+                            </div>
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">API Secret:</label>
+                                <input type="text" class="form-control" id="api-secret">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary">Add</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </aside>
 
-
-
-
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--    <script src="js/jquery-3.5.1.min.js"></script>-->
+<!--    <script src="js/bootstrap.js"></script>-->
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
 
